[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "flac_toolkit"
dynamic = ["version"]
description = "Command-line utility for FLAC audio file analysis, repair, and replay gain normalization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47,<2",
    "unidecode>=1.3,<2",
    "pyloudnorm>=0.1,<1",
    "soundfile>=0.12,<1",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "rich>=13.0,<14",
    "pathvalidate>=3.2,<4",
]

[tool.setuptools_scm]
write_to = "flac_toolkit/_version.py"

[tool.setuptools.packages.find]
include = ["flac_toolkit*"]
exclude = ["music*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
